--- a/README
+++ b/README
@@ -1,6 +1,11 @@
-Цель данного проекта создать библиотеку, которая позволит разыменовывать коротки ссылки, получаемые с помощью сервисок сокращателей
+Цель данного проекта создать библиотеку, которая позволит разыменовывать коротки ссылки, получаемые с помощью сервисов сокращателей
 Предполагается добавить поддержку:
 - bit.ly
-- t.co
 - clck.ru
 - is.gd
+- goo.gl
+
+- t.co
+
+Предполагается:
+- добавить поддержку google safebrowsing api
