delete unnecessary class

--- a/README
+++ b/README
@@ -1,10 +1,9 @@
 Цель данного проекта создать библиотеку, которая позволит разыменовывать коротки ссылки, получаемые с помощью сервисов сокращателей
-Предполагается добавить поддержку:
+Проверено на:
 - bit.ly
 - clck.ru
 - is.gd
 - goo.gl
-
 - t.co
 
 Предполагается:
